--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
 .box,
 input {
-height: 50px;
-width: 100px;
-border: 1px solid black;
-display: block;
-padding: 0;
+    height:75px;
+    width: 100px;
+    border: 1px solid black;
+    padding: 0;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+    text-align: center;
+}
+
+.box-container {
+    display: flex;
+}
+
+.box-container .box:last-child,
+.box-container input:last-child  {
+    flex-grow: 4;
 }
 
