--- a/style.css
+++ b/style.css
@@ -1,14 +1,38 @@
+body {
+    color: white;
+    font-size: 24px;
+    margin: 0;
+}
+
+.content-container {
+    background-image: url(dice.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 50% 50%;
+    position: relative;
+}
+
+
 .box,
 input {
     height:75px;
     width: 100px;
-    border: 1px solid black;
+    border: 1px solid white;
     padding: 0;
     align-items: center;
     display: flex;
     justify-content: center;
     flex-grow: 1;
     text-align: center;
+    background-color: #202020ea;
+    color: white;
+    font-size: 24px;
+}
+
+hr {
+    margin: 0;
+    padding: 1rem;
+    background-color: #181717;
 }
 
 .box-container {
