Added color changing box feature

--- a/style.css
+++ b/style.css
@@ -52,10 +52,10 @@ hr {
 }
 
 .box-below {
-    color: red;
+    background-color: red;
 }
 
 .box-above {
-    color: green;
+    background-color: green;
 }
 
